--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Accounting API for managing clients and balance sheets",
   "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
