--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest --testPathPattern=tests/unit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "find-duplicates": "node src/scripts/findDuplicateClients.js",
